# autoware-practice

./: .clang-format  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CPPLINT.cfg  README.md  autoware.repos  setup.cfg
.github/workflows/: pre-commit.yaml
src/autoware_practice_course/: CMakeLists.txt  README.md  package.xml
src/autoware_practice_course/config/: trajectory.csv  trajectory2.csv  trajectory_generator.sh  trajectory_zigzag.csv
src/autoware_practice_course/scripts/: run_autoware_practice_course example02_04.sh  run_autoware_practice_course_example02-02.sh  run_autoware_practice_course_example02_03.sh
src/autoware_practice_course/src/avoidance/: marker.cpp  trajectory_planner.cpp  trajectory_planner.hpp
src/autoware_practice_course/src/vehicle/: backward.cpp  backward.hpp  forward.cpp  forward.hpp
src/autoware_practice_course/src/velocity_planning/: longitudinal_controller.cpp  longitudinal_controller.hpp  p_controller.cpp  p_controller.hpp  trajectory_follower.cpp  trajectory_follower.hpp  trajectory_loader.cpp  trajectory_loader.hpp  trajectory_planner.cpp  trajectory_planner.hpp
src/autoware_practice_course/src/velocity_planning/scripts/: run_02_02.sh  run_02_03.sh  run_02_04.sh  run_autoware_practice_cource_example02_02.sh  run_autoware_practice_cource_example02_04.sh
src/autoware_practice_driver/: CMakeLists.txt  package.xml
src/autoware_practice_driver/launch/: vehicle.launch.xml
src/autoware_practice_dummy_localizer/: CMakeLists.txt  package.xml
src/autoware_practice_dummy_localizer/src/: dummy_localizer.cpp  dummy_localizer.hpp
src/autoware_practice_evaluator/: CMakeLists.txt  README.md  package.xml
src/autoware_practice_evaluator/config/: sample.yaml
src/autoware_practice_evaluator/doc/: FailureArea.md  JudgeResult.md  LatchResult.md  LogicalAnd.md  SuccessArea.md
src/autoware_practice_evaluator/launch/: evaluator.launch.xml
src/autoware_practice_evaluator/src/: condition.cpp  condition.hpp  evaluator.cpp  evaluator.hpp  geometry.cpp  geometry.hpp  visualization.cpp  visualization.hpp
src/autoware_practice_gnss_poser/: CMakeLists.txt  package.xml
src/autoware_practice_gnss_poser/src/: pose_transformer.cpp
src/autoware_practice_gyro_odometer/: CMakeLists.txt  package.xml
src/autoware_practice_gyro_odometer/src/: velocity_transformer.cpp
src/autoware_practice_launch/: CMakeLists.txt  package.xml
src/autoware_practice_launch/config/: autoware.rviz
src/autoware_practice_launch/launch/: autoware.launch.xml  practice.launch.xml  rviz.launch.xml
src/autoware_practice_lidar_simulator/: CMakeLists.txt  package.xml
src/autoware_practice_lidar_simulator/config/: object_centers.csv
src/autoware_practice_lidar_simulator/launch/: lidar_simulator.launch.xml
src/autoware_practice_lidar_simulator/src/: simple_lidar_simulator.cpp  simple_lidar_simulator.hpp
src/autoware_practice_localizer/: CMakeLists.txt  package.xml
src/autoware_practice_localizer/src/: localizer.cpp
src/autoware_practice_msgs/: CMakeLists.txt  package.xml
src/autoware_practice_msgs/msg/: FloatGrid.msg  JudgeStatus.msg
src/autoware_practice_problems/: CMakeLists.txt  README.md  package.xml
src/autoware_practice_problems/data/: default.yaml  vehicle_backward.yaml  vehicle_forward.yaml  vehicle_turning.yaml
src/autoware_practice_rviz_plugin/: CMakeLists.txt  package.xml
src/autoware_practice_rviz_plugin/plugins/: plugin_description.xml
src/autoware_practice_rviz_plugin/src/: result.cpp  result.hpp
src/autoware_practice_simulator/: CMakeLists.txt  README.md  package.xml
src/autoware_practice_simulator/config/: default.param.yaml  vehicle.param.yaml
src/autoware_practice_simulator/launch/: simulator.launch.xml  vehicle.launch.xml
src/autoware_practice_simulator/script/: control.py
src/autoware_practice_simulator/src/: controller.cpp  controller.hpp  geometry.cpp  geometry.hpp  interface.cpp  interface.hpp  kinematics.cpp  kinematics.hpp  simulator.cpp  simulator.hpp
src/autoware_practice_visualization/: CMakeLists.txt  package.xml
src/autoware_practice_visualization/plugins/: plugin_description.xml
src/autoware_practice_visualization/src/: marker.cpp  marker.hpp  result.cpp  result.hpp
